--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "TOKEN_BOT",
-    "adminIDs": ["ID_USER_ADMIN"],
-    "guildID": "ID_SERVER"
+    "token": "process.env.TOKEN",
+    "adminIDs": ["366196950800007169"],
+    "guildID": "942489299960610827"
 }
